--- a/static/components/upload/upload.css
+++ b/static/components/upload/upload.css
@@ -13,6 +13,83 @@
     border-radius: 5px;
 }
 .container {
-    width: 600px;
+    width: 800px;
     margin: 0 auto;
+    padding: 10px;
+    border: 1px solid #999;
+}
+.dropArea {
+    padding: 50px;
+    display: inline-block;
+    width: 400px;
+    text-align: center;
+    border: 1px dotted #ccc;
+}
+.upload-img-box {
+    display: inline-block;
+    float: left;
+    margin-left: -80px;
+}
+.upload-append-box {
+    overflow: hidden;
+    background-color: #fff;
+    border: 1px solid #c0ccda;
+    border-radius: 6px;
+    box-sizing: border-box;
+    margin-top: 10px;
+    padding: 10px 10px 10px 90px;
+    height: 92px;
+    position: relative;
+}
+.upload-img {
+    display: block;
+}
+.preview-box {
+    width: 360px;
+}
+.upload-desc {
+    display: block;
+    position: relative;
+}
+.upload-delete {
+    position: absolute;
+    top: 0;
+    right: 5px;
+    cursor: pointer;
+    color: #666;
+    font-size: 20px;
+}
+.upload-filename {
+    margin-bottom: 20px;
+    display: block;
+}
+.upload-progress {
+    display: none;
+    position:relative;
+    width:100%;
+    height:2px;
+    background-color:#ccc;
+}
+.upload-progress-default-bar {
+    position:absolute;
+    top:0;
+    left:0;
+    height:2px;
+    background-color:#409eff;
+}
+.upload-progress-bar {
+    position:absolute;
+    top:-18px;
+    right:0;
+    font-size:14px;
+    color:#666;
+}
+.upload-btn {
+    outline: none;
+    background-color: transparent;
+    margin-top: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 7px 12px;
+    cursor: pointer;
 }
