feat:修改upload.html文件

--- a/views/upload.html
+++ b/views/upload.html
@@ -30,7 +30,7 @@
     var dropZoom = document.getElementById('dropZoom');
     Upload([file , dropZoom] , {
         previewBox : previewBox,      // 存放预览图的容器
-        autoUpload : true,           // 是否自动上传
+        autoUpload : false,           // 是否自动上传
         width : 70,       // 预览图的宽度
         height : 'auto',       // 预览图的高度
         size : 1024 * 1024 * 20,    // 允许上传图片的大小
