--- a/views/index.html
+++ b/views/index.html
@@ -34,7 +34,10 @@
             日期选择组件(PC版)
         </a>
         <a href="/upload">
-            图片上传组件
+            图片上传组件（PC+移动）
+        </a>
+        <a href="/dialog">
+            弹框组件
         </a>
     </div>
 </body>
