--- a/views/dialog.html
+++ b/views/dialog.html
@@ -33,7 +33,7 @@
 <script>
     var btn1 = document.getElementById('btn1');
     Dialog(btn1 , {
-        title : '我是弹框',
+        title : '提示',
         content : '我是一个弹框，我来自andy'
     });
 </script>
