feat:修改弹框组件

--- a/static/components/dialog/dialog.css
+++ b/static/components/dialog/dialog.css
@@ -35,13 +35,13 @@
     text-align: center;
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
+    margin-bottom: -20px;
 }
 .dialog-content-body {
     font-size: 16px;
     color: #666;
     text-align: center;
     padding: 20px;
-    margin-top: -20px;
 }
 .dialog-content-footer {
     display: flex;
@@ -72,12 +72,25 @@
     -webkit-tap-highlight-color:transparent;
     border: none;
     background-color: #fff;
+    position: relative;
+}
+.dialog-btn:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 1px;
+    height: 100%;
+    color: #d5d5d5;
+    border-left: 1px solid #d5d5d5;
+    transform: scaleX(0.5);
+    -webkit-transform: scaleX(0.5);
 }
 .dialog-btn:first-child {
-    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
 }
 .dialog-btn:last-child {
-    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 .dialog-show .dialog-content {
     animation: zoom-in 0.2s ease-in forwards;
@@ -98,27 +111,18 @@
     width: 24px;
     height: 24px;
 }
-.dialog-close-btn:before {
-    content: '';
-    width: 18px;
-    height: 1px;
-    background-color: #808080;
+.dialog-close-btn {
+    font-size: 30px;
     position: absolute;
-    top: 12px;
-    right: 5px;
+    top: 4px;
+    right: 4px;
     transform: rotate(45deg);
     -webkit-transform: rotate(45deg);
-}
-.dialog-close-btn:after {
-    content: '';
-    width: 1px;
-    height: 18px;
-    background-color: #808080;
-    position: absolute;
-    top: 3px;
-    right: 14px;
-    transform: rotate(45deg);
-    -webkit-transform: rotate(45deg);
+    width: 24px;
+    height: 24px;
+    text-align: center;
+    line-height: 24px;
+    color: #999;
 }
 @keyframes zoom-in {
     0% {
