--- a/views/dialog.html
+++ b/views/dialog.html
@@ -33,7 +33,8 @@
 <script>
     var btn1 = document.getElementById('btn1');
     Dialog(btn1 , {
-        title : '提示',
+        title : '',
+        type : 'alert',
         content : '我是一个弹框，我来自andy'
     });
 </script>
