feat:完成弹框组件

--- a/views/dialog.html
+++ b/views/dialog.html
@@ -202,7 +202,7 @@
 </div>
 <div style="margin-bottom: 20px;">
     <div style="margin: 10px;">
-        <p style="margin-bottom: 10px;">按弹框风格弹框</p>
+        <p style="margin-bottom: 10px;">自定义button按钮</p>
         <button id="btn12" style="border: none;outline: none;background-color: #ddd;padding: 4px 8px;">显示弹框</button>
     </div>
     <pre style="background-color: #eee;margin: 10px;padding: 10px;box-sizing: border-box;">
