feat:完成弹框组件PC版

--- a/views/index.html
+++ b/views/index.html
@@ -37,9 +37,10 @@
             图片上传组件（PC+移动）
         </a>
         <a href="/dialog">
-            弹框组件
+            弹框组件（移动版）
         </a>
         <a href="/ripple">水波纹效果</a>
+        <a href="/pcDialog">弹框组件（PC版）</a>
     </div>
 </body>
 </html>
